--- a/Identity/TaskManager.Identity.Api/appsettings.json
+++ b/Identity/TaskManager.Identity.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQL": "User ID=postgres;Password=11061994;Host=localhost;Port=5432;Database=TaskManagerIdentityDb;"
+  },
+  "Token": {
+    "Audience": "https://localhost:4200",
+    "Issuer": "API",
+    "SecurityKey": "Benim kodlarım sizin nezdinizde makul bir zemine oturmak zorunda degil"
+  }
 }
