--- a/Business/TaskManager.Business.Domain/TaskManager.Business.Domain.csproj
+++ b/Business/TaskManager.Business.Domain/TaskManager.Business.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
+  </ItemGroup>
+
 </Project>
