--- a/Identity/TaskManager.Identity.Application/TaskManager.Identity.Application.csproj
+++ b/Identity/TaskManager.Identity.Application/TaskManager.Identity.Application.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\CommonModels\TaskManager.CommonModels\TaskManager.CommonModels.csproj" />
+    <ProjectReference Include="..\TaskManager.Identity.Domain\TaskManager.Identity.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
