Identity database connection

--- a/Identity/TaskManager.Identity.Api/appsettings.json
+++ b/Identity/TaskManager.Identity.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "User ID=postgres;Password=11061994;Host=localhost;Port=5432;Database=TaskManagerIdentityDb;"
+    "TaskManagerIdentityConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerIdentityDb"
   },
   "Token": {
     "Audience": "https://localhost:4200",
