--- a/Identity/TaskManager.Identity.Api/TaskManager.Identity.Api.csproj
+++ b/Identity/TaskManager.Identity.Api/TaskManager.Identity.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
@@ -25,10 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\TaskManager.Identity.Application\TaskManager.Identity.Application.csproj" />
     <ProjectReference Include="..\TaskManager.Identity.Infrastructure\TaskManager.Identity.Infrastructure.csproj" />
   </ItemGroup>
 
