--- a/Identity/TaskManager.Identity.Domain/TaskManager.Identity.Domain.csproj
+++ b/Identity/TaskManager.Identity.Domain/TaskManager.Identity.Domain.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.8" />
   </ItemGroup>
 
