--- a/Business/TaskManager.Business.Api/appsettings.json
+++ b/Business/TaskManager.Business.Api/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=57566;Database=TaskManagerBusinessDb"
+    "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerBusinessDb"
+  },
+  "Token": {
+    "Audience": "https://localhost:4200",
+    "Issuer": "API",
+    "SecurityKey": "Benim kodlarım sizin nezdinizde makul bir zemine oturmak zorunda degil"
   }
 }
