--- a/Business/TaskManager.Business.Application/TaskManager.Business.Application.csproj
+++ b/Business/TaskManager.Business.Application/TaskManager.Business.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\TaskManager.Business.Infrastructure\TaskManager.Business.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\User\" />
+  </ItemGroup>
+
 </Project>
