--- a/CommonModels/TaskManager.CommonModels/TaskManager.CommonModels.csproj
+++ b/CommonModels/TaskManager.CommonModels/TaskManager.CommonModels.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Business\TaskManager.Business.Domain\TaskManager.Business.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
