--- a/Business/TaskManager.Business.Api/appsettings.json
+++ b/Business/TaskManager.Business.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerBusinessDb"
+    "TaskManagerBusinessConnection": "Server=localhost;Port=5400;User Id=postgres;Password=chain012034;Database=TaskManagerBusinessDb"
   },
   "Token": {
     "Audience": "https://localhost:4200",
