Storage Service & CreateCommandRequest de File ekleme

--- a/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
+++ b/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\TaskManager.Business.Domain\TaskManager.Business.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Storage\Azure\" />
+  </ItemGroup>
+
 </Project>
