--- a/Business/TaskManager.Business.Api/TaskManager.Business.Api.csproj
+++ b/Business/TaskManager.Business.Api/TaskManager.Business.Api.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\TaskManager.Business.Infrastructure\TaskManager.Business.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\resource\files\" />
+  </ItemGroup>
+
 </Project>
