--- a/Business/TaskManager.Business.Application/TaskManager.Business.Application.csproj
+++ b/Business/TaskManager.Business.Application/TaskManager.Business.Application.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Project\Queries\" />
     <Folder Include="Features\User\" />
   </ItemGroup>
 
