--- a/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
+++ b/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
@@ -23,10 +24,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TaskManager.Business.Domain\TaskManager.Business.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\Storage\Azure\" />
   </ItemGroup>
 
 </Project>
