--- a/Identity/TaskManager.Identity.Api/appsettings.json
+++ b/Identity/TaskManager.Identity.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManagerIdentityConnection": "Server=localhost;Port=5400;User Id=postgres;Password=chain012034;Database=TaskManagerIdentityDb"
+    "TaskManagerIdentityConnection": "Server=localhost;Port=5432;User Id=postgres;Password=eftelya;Database=TaskManagerIdentityDb"
   },
   "Token": {
     "Audience": "https://localhost:4200",
