--- a/Identity/TaskManager.Identity.Api/appsettings.json
+++ b/Identity/TaskManager.Identity.Api/appsettings.json
@@ -7,11 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManagerIdentityConnection": "Server=localhost;Port=5432;User Id=postgres;Password=11061994;Database=TaskManagerIdentityDb"
+    "TaskManagerIdentityConnection": "Server=localhost;Port=5400;User Id=postgres;Password=chain012034;Database=TaskManagerIdentityDb"
   },
   "Token": {
     "Audience": "https://localhost:4200",
     "Issuer": "API",
     "SecurityKey": "Benim kodlarım sizin nezdinizde makul bir zemine oturmak zorunda degil"
+  },
+  "DependencyInjection": {
+    "RabbitMQService": "TaskManager.Identity.Application.Features.Users.Commands.RabbitMQ.RabbitMQService, TaskManager.Identity.Application",
+    "IRabbitMQService": "TaskManager.Identity.Application.Features.Users.Commands.RabbitMQ.RabbitMQService, TaskManager.Identity.Application"
   }
 }
