--- a/Identity/TaskManager.Identity.Infrastructure/TaskManager.Identity.Infrastructure.csproj
+++ b/Identity/TaskManager.Identity.Infrastructure/TaskManager.Identity.Infrastructure.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.8" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.8" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
