--- a/Business/TaskManager.Business.Api/appsettings.json
+++ b/Business/TaskManager.Business.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=11061994;Database=TaskManagerBusinessDb"  //lOCAL'DE ÇALIŞMAK İÇİN BURAYI
+    "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerBusinessDb"  //lOCAL'DE ÇALIŞMAK İÇİN BURAYI
     //"TaskManagerBusinessConnection": "Host=192.168.40.238;Username=postgres;Password=eftelya;Database=TaskManager" //ORTAK DATABASE'DE ÇALIŞMAK İÇİN DE BURAYI KULLANIN
     //AKIL SAĞLIĞIMIZ KALMAMIŞTIR
     //NOKTA
