--- a/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
+++ b/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="EFCore.NamingConventions" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
