--- a/Identity/TaskManager.Identity.Api/appsettings.json
+++ b/Identity/TaskManager.Identity.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManagerIdentityConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerIdentityDb" //lOCAL'DE ÇALIŞMAK İÇİN BURAYI
-    //"TaskManagerIdentityConnection": "Host=192.168.40.238;Username=postgres;Password=eftelya;Database=TaskManagerIdentity" //ORTAK DATABASE'DE ÇALIŞMAK İÇİN DE BURAYI KULLANIN
+    "TaskManagerIdentityConnection": "Server=localhost;Port=5432;User Id=postgres;Password=eftelya;Database=TaskManagerIdentity" //lOCAL'DE ÇALIŞMAK İÇİN BURAYI
+    //"TaskManagerIdentityConnection": "Host=192.168.40.64;Username=postgres;Password=eftelya;Database=TaskManagerIdentity" //ORTAK DATABASE'DE ÇALIŞMAK İÇİN DE BURAYI KULLANIN
   },
   "Token": {
     "Audience": "https://localhost:4200",
