log operation and database

--- a/Business/TaskManager.Business.Api/appsettings.json
+++ b/Business/TaskManager.Business.Api/appsettings.json
@@ -7,10 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=eftelya;Database=TaskManagerBusiness2" //lOCAL'DE ÇALIŞMAK İÇİN BURAYI
+    "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerBusinessDb", //lOCAL'DE ÇALIŞMAK İÇİN BURAYI
     //"TaskManagerBusinessConnection": "Host=192.168.40.64;Username=postgres;Password=eftelya;Database=TaskManager" //ORTAK DATABASE'DE ÇALIŞMAK İÇİN DE BURAYI KULLANIN
-    //AKIL SAĞLIĞIMIZ KALMAMIŞTIR
-    //NOKTA
+    "TaskManagerLogConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerLogDb"
   },
   "Token": {
     "Audience": "https://localhost:4200",
