--- a/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
+++ b/Business/TaskManager.Business.Infrastructure/TaskManager.Business.Infrastructure.csproj
@@ -25,7 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CommonModels\TaskManager.CommonModels\TaskManager.CommonModels.csproj" />
     <ProjectReference Include="..\TaskManager.Business.Domain\TaskManager.Business.Domain.csproj" />
+    <ProjectReference Include="..\TaskManager.Business.LogService\TaskManager.Business.LogService.csproj" />
   </ItemGroup>
 
 </Project>
