--- a/Identity/TaskManager.Identity.Api/TaskManager.Identity.Api.csproj
+++ b/Identity/TaskManager.Identity.Api/TaskManager.Identity.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.151" />
     <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
