--- a/Business/TaskManager.Business.ChatService/TaskManager.Business.ChatService.csproj
+++ b/Business/TaskManager.Business.ChatService/TaskManager.Business.ChatService.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.1.0" />
+    <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
   </ItemGroup>
 
