--- a/Business/TaskManager.Business.Api/appsettings.json
+++ b/Business/TaskManager.Business.Api/appsettings.json
@@ -9,7 +9,8 @@
   "ConnectionStrings": {
     "TaskManagerBusinessConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerBusinessDb", //lOCAL'DE ÇALIŞMAK İÇİN BURAYI
     //"TaskManagerBusinessConnection": "Host=192.168.40.64;Username=postgres;Password=eftelya;Database=TaskManager" //ORTAK DATABASE'DE ÇALIŞMAK İÇİN DE BURAYI KULLANIN
-    "TaskManagerLogConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerLogDb"
+    "TaskManagerLogConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerLogDb",
+    "TaskManagerChatConnection": "Server=localhost;Port=5432;User Id=postgres;Password=1;Database=TaskManagerChatDb"
   },
   "Token": {
     "Audience": "https://localhost:4200",
