--- a/Business/TaskManager.Business.ChatService/TaskManager.Business.ChatService.csproj
+++ b/Business/TaskManager.Business.ChatService/TaskManager.Business.ChatService.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManager.Business.Chat\TaskManager.Business.Chat.csproj" />
   </ItemGroup>
 
 </Project>
