--- a/Business/TaskManager.Business.LogService/TaskManager.Business.LogService.csproj
+++ b/Business/TaskManager.Business.LogService/TaskManager.Business.LogService.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
 
